compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_import_decl_import_chain.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var outer : int\nmodule a\n    import outer\n\n    module b\n        import outer\n\n        module c\n            import outer\n\n            var k := outer\n        end c\n    end b\n\nend a\n"
---
"outer"@(FileId(1), 4..9) [Declared]: int
"a"@(FileId(1), 23..24) [Declared]: <error>
"outer"@(FileId(1), 36..41) [ItemImport(LocalDefId(0))]: int
"b"@(FileId(1), 54..55) [Declared]: <error>
"outer"@(FileId(1), 71..76) [ItemImport(LocalDefId(2))]: int
"c"@(FileId(1), 93..94) [Declared]: <error>
"outer"@(FileId(1), 114..119) [ItemImport(LocalDefId(4))]: int
"k"@(FileId(1), 137..138) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

