compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_import_decl_mutable_on_never_applicable.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type ty : int\nmodule _\n    import var ty\n    type tou : ty\nend _\n"
---
"ty"@(FileId(1), 5..7) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"_"@(FileId(1), 21..22) [Declared]: <error>
"ty"@(FileId(1), 38..40) [ItemImport(LocalDefId(0))]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"tou"@(FileId(1), 50..53) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(3))] of int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 34..37: cannot use `var` here
| error in file FileId(1) for 34..37: `var` can only be applied to variables
| note in file FileId(1) for 5..7: `ty` declared here
