compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_import_decl_on_use.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var blah : int\nmodule _\n    import blah\n    var k := blah\nend _\n"
---
"blah"@(FileId(1), 4..8) [Declared]: int
"_"@(FileId(1), 22..23) [Declared]: <error>
"blah"@(FileId(1), 35..39) [ItemImport(LocalDefId(0))]: int
"k"@(FileId(1), 48..49) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

