compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_module_field_normal.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "module a\n    export b\n    var b : int\nend a\nvar c := a.b"

---
"a"@(FileId(1), 7..8) [Declared]: <error>
"b"@(FileId(1), 30..31) [Declared]: int
"b"@(FileId(1), 20..21) [ItemExport(LocalDefId(1))]: int
"c"@(FileId(1), 48..49) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

