compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_module_field_not_exported.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module a export b var b : int end a\nvar k := a.c\n"
---
"a"@(FileId(1), 7..8) [Module(No)]: <error>
"b"@(FileId(1), 22..23) [ConstVar(Var, No)]: int
"b"@(FileId(1), 16..17) [Export]: int
"k"@(FileId(1), 40..41) [ConstVar(Var, No)]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 47..48: no field named `c` in expression
| error in file FileId(1) for 47..48: no field named `c` in here
