compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_module_field_unqualified_export_mutability.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "module a export ~. var b\n    var b : int\nend a\nb := 2"

---
"a"@(FileId(1), 7..8) [Declared]: <error>
"b"@(FileId(1), 33..34) [Declared]: int
"b"@(FileId(1), 23..24) [ItemExport(LocalDefId(1))]: int
"<root>"@(dummy) [Declared]: <error>

