compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_module_field_unqualified_export_not_mut.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module a export ~.b\n    var b : int\nend a\nb := 1\n"
---
"a"@(FileId(1), 7..8) [Module(No)]: <error>
"b"@(FileId(1), 28..29) [ConstVar(Var, No)]: int
"b"@(FileId(1), 18..19) [Export]: int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 44..46: cannot assign into `b`
| error in file FileId(1) for 42..43: `b` is not exported as `var`
| note in file FileId(1) for 18..19: `b` exported from here
